CUL-10: Fixed jsenabled paging diaplay and quiz overlapping issue.

--- a/theme/cul_boost/scss/custom/_blocks.scss
+++ b/theme/cul_boost/scss/custom/_blocks.scss
@@ -40,6 +40,13 @@
             }
         }
     }
+    &.block_culactivity_stream {
+        .pages {
+            .jsenabled & {
+                display: none;
+            }
+        }
+    }
     &.block_culupcoming_events {
         background-color: $brand-primary;
         border: none;
