--- a/theme/cul_boost/scss/custom/_modules.scss
+++ b/theme/cul_boost/scss/custom/_modules.scss
@@ -66,3 +66,9 @@
         }
     }
 }
+
+#page-mod-quiz-edit {
+    .mod_quiz-edit-top-controls {
+        clear: both;
+    }
+}
